// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeIso8601Strict fails when given a string in the correct format 1`] = `
"<dim>expect(</><red>received</><dim>).not.toBeIso8601Strict(</><dim>)</>

Expected value to not be a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>\\"2018-01-01T23:59:59.999Z\\"</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string  1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>\\"\\"</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string [] 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>[]</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string {} 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>{}</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string 0 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>0</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string NaN 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>NaN</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string false 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>false</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string null 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>null</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string someString 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>\\"someString\\"</>"
`;

exports[`.toBeIso8601Strict fails when not given a none ISO8601 string undefined 1`] = `
"<dim>expect(</><red>received</><dim>).toBeIso8601Strict(</><dim>)</>

Expected to receive a string in the form 'YYYY-MM-DDThh:mm:ss.SSSZ', received:
  <red>undefined</>"
`;
